# Computational-Intelligence

./: Halloween.ipynb  pyproject.toml  quoridor.py  quoridor_new.py  rastrigin.ipynb  readme.md  set-covering-ea.ipynb  set-covering.ipynb  set_covering.ipynb
Challenges/: Halloween.ipynb
Laboratories/LAB01/: set-covering.ipynb
Laboratories/LAB02/: README.md  lab2-nim.ipynb
Laboratories/LAB09/: README.md  lab9.ipynb  lab9_baseline.ipynb  lab9_islands.ipynb  lab9_islands_segregation.ipynb  lab9_valhalla.ipynb
Laboratories/LAB09/utils/: island_functions.py  mutation_functions.py  parent_selection_functions.py
Laboratories/LAB10/: Agent.py  Game.py  MyStrategy.py  Teacher.py  lab10.ipynb  parser.py  play.py  plot_agent_reward.py  q_agent.pkl  q_agent_my_strategy.pkl  readme.md
Laboratories/LAB10/.ipynb_checkpoints/: test-checkpoint.ipynb
Laboratories/Lab9_after_deadline/: README.md
quixo/: GameUI.py  QuixoGameLogicWrapper.py  main.py  minmax.py  minmax_l.py  minmax_new.py  requirements.txt  test.ipynb  ui.py
quixo/gui/: GameUI.py
