[tool.poetry]
name = "ci2023"
version = "0.1.0"
description = "Virtual environment for Computational Intelligence exam at PoliTO"
authors = ["Luca Catalano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.1"
networkx = "^2.6.3"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
scikit-learn = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
